--- a/ReadabilityApiApp/Web.config
+++ b/ReadabilityApiApp/Web.config
@@ -4,7 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
+  <appSettings file="PrivateAppSettings.config">
+    <add key ="ReadabilityApiKey" value="YOUR_READABILITY_API_KEY"/>
+    <add key ="ReadabilityApiSecret" value="YOUR_READABILITY_API_SECRET"/>
+    <add key ="AccessToken" value="YOUR_ACCESS_TOKEN"/>
+    <add key ="Secret" value="YOUR_SECRET"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
