--- a/ReadabilityApiApp/ReadabilityApiApp.csproj
+++ b/ReadabilityApiApp/ReadabilityApiApp.csproj
@@ -47,10 +47,6 @@
       <HintPath>..\packages\Common.Logging.Core.3.0.0\lib\net40\Common.Logging.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="CSharp.Readability, Version=0.1.5522.17977, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharp.Readability.0.1.5522.17977\lib\net40\CSharp.Readability.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -136,7 +132,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CSharp.Readability\CSharp.Readability\CSharp.Readability.csproj">
+      <Project>{0ff28db6-7608-4874-9edb-e4f32ad0c574}</Project>
+      <Name>CSharp.Readability</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
