--- a/ReadabilityApiApp/Web.config
+++ b/ReadabilityApiApp/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
   <appSettings file="PrivateAppSettings.config">
-    <add key ="ReadabilityApiKey" value="YOUR_READABILITY_API_KEY"/>
-    <add key ="ReadabilityApiSecret" value="YOUR_READABILITY_API_SECRET"/>
-    <add key ="AccessToken" value="YOUR_ACCESS_TOKEN"/>
-    <add key ="Secret" value="YOUR_SECRET"/>
+    <add key="ReadabilityApiKey" value="YOUR_READABILITY_API_KEY" />
+    <add key="ReadabilityApiSecret" value="YOUR_READABILITY_API_SECRET" />
+    <add key="AccessToken" value="YOUR_ACCESS_TOKEN" />
+    <add key="Secret" value="YOUR_SECRET" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -26,7 +26,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -35,6 +35,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
