--- a/ReadabilityApiApp/packages.config
+++ b/ReadabilityApiApp/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.0.0" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="CSharp.Readability" version="0.1.5522.17977" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Spring.Rest" version="1.1.1" targetFramework="net452" />
   <package id="Spring.Social.Core" version="1.0.1" targetFramework="net452" />
-  <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
-  <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
-  <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.3.2" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net452" />
 </packages>
